# GL-LowPopArt

./: .gitignore  Catoni_ablations.npz  Fig1.npz  Fig2.npz  README.md  algorithms.py  burer_monteiro.py  config.py  environment.yml  fig1.py  fig1.sh  fig1_plot.py  fig2.py  fig2.sh  fig2_plot.py  fig3.sh  gl_lowpopart.py  gls2-lowpopart.py  lowpopart.py  onebit.py  prior_gl_lowpopart.py  problems.py  pyproject.toml  test_bootstrap.py  utils.py
.cache/mpl/: fontlist-v390.json
deprecated/: gls2-lowpopart.py
linear/: linear.py
src/gl_lowpopart/: __init__.py  config.py  utils.py
src/gl_lowpopart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gl_lowpopart/core/: __init__.py  burer_monteiro.py  optimization.py  problems.py
src/gl_lowpopart/experiments/: common.py  fig1.py  fig2.py  fig3.py
src/gl_lowpopart/plotting/: __init__.py  common.py  fig1.py  fig2.py  fig3.py
tests/: test_bootstrap.py
