[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-lowpopart"
version = "0.1.0"
description = "Code for GL-LowPopArt experiments"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "cvxpy>=1.5.3",
  "h5py>=3.12.1",
  "matplotlib>=3.10.0",
  "mosek>=11.0.21",
  "numpy>=2.0.1",
  "scipy>=1.15.3",
  "tqdm>=4.67.1",
]

[project.scripts]
gl-fig1 = "gl_lowpopart.experiments.fig1:main"
gl-fig2 = "gl_lowpopart.experiments.fig2:main"
gl-fig1-plot = "gl_lowpopart.plotting.fig1:main"
gl-fig2-plot = "gl_lowpopart.plotting.fig2:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
